--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(opengl_engine "main.cpp" "3rdparty/glad.c"
  "engine/wrappers/shader/shader_manager.cpp" 
  "engine/wrappers/texture/texture.cpp"
  "engine/wrappers/window/window.cpp"
- "engine/subsystems/gui/ecs_comps.cpp" "engine/scene/scene.hpp" "engine/scene/scene.cpp")
+ "engine/subsystems/gui/ecs_comps.cpp" "engine/scene/scene.hpp" "engine/scene/scene.cpp" "3rdparty/include/assimp/config.h"  "engine/renderer/draw_commands.cpp" "engine/model/importers.cpp"  "engine/renderer/renderer.cpp" "engine/renderer/pipeline.cpp" "engine/renderer/buffer_binder.cpp")
 set_property(TARGET opengl_engine PROPERTY CXX_STANDARD 20)
 
 target_link_directories(opengl_engine PRIVATE "3rdparty/lib")
@@ -20,6 +20,5 @@ target_include_directories(opengl_engine PRIVATE "3rdparty/include")
 target_link_libraries(opengl_engine PRIVATE "glfw3dll" "assimp-vc143-mt")
 
 target_compile_definitions(opengl_engine PRIVATE GL_VER_MAJ=4 GL_VER_MIN=6 GL_FORWARD_COMPAT=GLFW_OPENGL_FORWARD_COMPAT GL_PROFILE=GLFW_OPENGL_CORE_PROFILE PUBLIC USE_DEFAULT_GL_INIT_HINTS)
-
 add_subdirectory("3rdparty")
 add_subdirectory("assets")
