part one of catalog structure refactorization

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,27 +1,40 @@
-add_executable(opengl_engine "main.cpp" "3rdparty/glad.c" 
- "engine/engine.cpp"
- "engine/camera/camera.cpp"
- "engine/controller/controller.cpp" 
- "engine/controller/keyboard/keyboard.cpp" 
- "engine/subsystems/ecs/ecs.cpp"
- "engine/subsystems/gui/gui.cpp"
- "engine/renderer/renderer.cpp"
- "engine/subsystems/renderer/systems.cpp"
- "engine/wrappers/buffer/buffer.cpp" 
- "engine/wrappers/shader/shader.cpp"
- "engine/wrappers/shader/shader_manager.cpp" 
- "engine/wrappers/texture/texture.cpp"
- "engine/wrappers/window/window.cpp"
- "engine/subsystems/gui/ecs_comps.cpp"
- "engine/scene/scene.hpp"
- "engine/scene/scene.cpp"
- "3rdparty/include/assimp/config.h"
- "engine/model/importers.cpp"
-  "engine/wrappers/buffer/ubo.cpp"
- "engine/physics/gjk.cpp" "engine/subsystems/gui/render_graph.cpp"
-
- "3rdparty/include/imgui/imgui_stdlib.cpp" 
- "3rdparty/include/imgui/imgui_stdlib.h"
+add_executable(opengl_engine 
+"main.cpp" 
+"3rdparty/glad.c"
+"3dcalc/3dcalc.cpp"
+"3rdparty/include/glm/detail/glm.cpp"
+"3rdparty/include/imgui/imgui.cpp"
+"3rdparty/include/imgui/imgui_demo.cpp"
+"3rdparty/include/imgui/imgui_draw.cpp"
+"3rdparty/include/imgui/imgui_impl_glfw.cpp"
+"3rdparty/include/imgui/imgui_impl_opengl3.cpp"
+"3rdparty/include/imgui/imgui_stdlib.cpp"
+"3rdparty/include/imgui/imgui_tables.cpp"
+"3rdparty/include/imgui/imgui_widgets.cpp"
+"3rdparty/include/imgui/implot.cpp"
+"3rdparty/include/imgui/implot_demo.cpp"
+"3rdparty/include/imgui/implot_items.cpp"
+"engine/camera/camera.cpp"
+"engine/controller/controller.cpp"
+"engine/controller/keyboard/keyboard.cpp"
+"engine/engine.cpp"
+"engine/gpu/buffers/buffer.cpp"
+"engine/gpu/buffers/ubo.cpp"
+"engine/gpu/shaderprogram/shader.cpp"
+"engine/gpu/shaderprogram/shader_manager.cpp"
+"engine/gpu/shaderprogram/shader_template.cpp"
+"engine/gpu/texture/texture.cpp"
+"engine/gui/gui.cpp"
+"engine/gui/render_graph.cpp"
+"engine/legacy/model/animation.cpp"
+"engine/legacy/model/importers.cpp"
+"engine/legacy/model/model.cpp"
+"engine/legacy/physics/gjk.cpp"
+"engine/legacy/subsystems/ecs/ecs.cpp"
+"engine/legacy/subsystems/ecs/ecs.d.cpp"
+"engine/legacy/subsystems/renderer/systems.cpp"
+"engine/renderer/renderer.cpp"
+"engine/window/window.cpp"
 )
 set_property(TARGET opengl_engine PROPERTY CXX_STANDARD 20)
 
