--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(opengl_engine
 set_property(TARGET opengl_engine PROPERTY CXX_STANDARD 20)
 
 target_link_directories(opengl_engine PRIVATE "3rdparty/lib")
-target_include_directories(opengl_engine PRIVATE "3rdparty/include")
+target_include_directories(opengl_engine PRIVATE "3rdparty/include" ".")
 target_link_libraries(opengl_engine PRIVATE "glfw3dll" "assimp-vc143-mtd")
 
 target_compile_definitions(opengl_engine PRIVATE GL_VER_MAJ=4 GL_VER_MIN=6 GL_FORWARD_COMPAT=GLFW_OPENGL_FORWARD_COMPAT GL_PROFILE=GLFW_OPENGL_CORE_PROFILE PUBLIC USE_DEFAULT_GL_INIT_HINTS)
